# Termin_Web_App

./: .gitignore  db.sqlite3  package-lock.json  package.json  pyproject.toml  tailwind.config.js
config/: settings.py  urls.py
conversations/: admin.py  models.py
conversations/migrations/: 0001_initial.py
core/: urls.py
houses/: admin.py  forms.py  models.py  urls.py  views.py
houses/management/commands/: seed_amenities.py  seed_facilites.py  seed_houses.py
houses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_house_baths_alter_house_bedrooms_and_more.py  0004_amenity_facility_houserule_housetype_and_more.py  0005_alter_photo_file.py  0006_rename_room_photo_house.py  0007_house_created_house_updated.py
lists/: admin.py  models.py
lists/management/commands/: seed_lists.py
lists/migrations/: 0001_initial.py  0002_rename_rooms_list_houses.py
reservations/: admin.py  models.py
reservations/migrations/: 0001_initial.py  0002_rename_room_reservation_house.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_rename_room_review_house_alter_review_accuracy_and_more.py
static/css/: styles.css
template/: 404.html  base.html  d-home.html  home.html
template/houses/: f-detail.html  house_detail.html  house_list.html  search.html
template/partials/: header.html  house_card.html  nav.html  social_login.html
template/users/: login.html
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_user_superhost.py  0003_user_login_method.py
(+2 files in other folders)
