[tool.poetry]
name = "terminwebapp"
version = "0.1.0"
description = ""
authors = ["HannesCho <hoonsungcho11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
