[tool.poetry]
name = "terminwebapp"
version = "0.1.0"
description = ""
authors = ["HannesCho <hoonsungcho11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
Pillow = "^9.2.0"
django-countries = "^7.3.2"
django-dotenv = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
